# AdventOfCode2018

./: .gitignore
Day_1/: CMakeLists.txt  ChronalCalibration.cpp
Day_2/: CMakeLists.txt  InventoryManagementSystem.cpp
Day_2/bingcc/: CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
Day_2/msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  InventoryManagementSystem.sln  InventoryManagementSystem.vcxproj  InventoryManagementSystem.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Day_2/msvc/Debug/: InventoryManagementSystem.ilk
Day_2/msvc/InventoryManagementSystem.dir/Debug/Inventor.AE7FEFE8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Day_2/msvc/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Day_3/: CMakeLists.txt  test2.txt
Day_3/NoMatterHowYouSliceIt/: CMakeLists.txt  NoMatterHowYouSliceIt.cpp  NoMatterHowYouSliceIt.h
Day_4/: CMakeLists.txt  ReposeRecord.cpp  test.txt
Day_5/: AlchemicalReduction.cpp  CMakeLists.txt  dump.txt
Day_6/: CMakeLists.txt  ChronalCoordinates.cpp
Day_7/: CMakeLists.txt  TheSumofItsParts.cpp
Day_8/: CMakeLists.txt  MemoryManeuver.cpp
